Update flattened field detection logic in Verifier